syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service SecurityLoginsLog{
	rpc GetSecurityLoginsLog(SecLoginsLogIdRequest) returns (SecLoginsLogProto);
    rpc GetAllSecurityLoginsLog(google.protobuf.Empty) returns(SecLoginsLogArray);
	rpc UpdateSecurityLoginsLog(SecLoginsLogArray) returns (google.protobuf.Empty);
	rpc CreateSecurityLoginsLog(SecLoginsLogArray) returns (google.protobuf.Empty);
	rpc DeleteSecurityLoginsLog(SecLoginsLogArray) returns (google.protobuf.Empty);
}

message SecLoginsLogIdRequest{
	string Id = 1;
}
message SecLoginsLogProto{
        string Id = 1;
        string Login = 2;
        string SourceIP = 3;
        google.protobuf.Timestamp LogonDate = 4;
		bool IsSuccesful = 5;
}
message SecLoginsLogArray{
    repeated SecLoginsLogProto SecLoginsLog = 1;
}